--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@vimeo/player": "^2.20.1",
+    "flatpickr": "^4.6.13",
     "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.14.1",
     "swiper": "^9.1.0",
