--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-js-hw-09",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/swiper-promo/",
+    "build": "vite build --base=/goit-js-hw-09/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "@vimeo/player": "^2.20.1",
     "flatpickr": "^4.6.13",
     "lodash.throttle": "^4.1.1",
+    "notiflix": "^3.2.6",
     "simplelightbox": "^2.14.1",
     "swiper": "^9.1.0",
     "vite-plugin-full-reload": "^1.0.5",
